# evolution

libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
