[package]
name = "lib-genetic-algorithm"
version = "0.1.0"
authors = ["haegh <hughs_111@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4"
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
maplit = "1.0"
